--- a/TabibYab/res/values/strings.xml
+++ b/TabibYab/res/values/strings.xml
@@ -20,6 +20,10 @@
         <item>مطب</item>
         <item>کلینیک</item>
     </string-array>
-     <string name="url_list_doctor">http://192.168.1.100:8000/search/</string>
+    
+     <string name="url_list_doctor">http://192.168.1.3:8000/search/</string>
+     <string name="url_doctor_info">http://192.168.1.3:8000/doctor/</string>
+    
+     <string name="doctor_info">DOCTOR_INFO</string>
 
 </resources>
