--- a/TabibYab/res/values/strings.xml
+++ b/TabibYab/res/values/strings.xml
@@ -23,7 +23,12 @@
     
      <string name="url_list_doctor">http://192.168.1.3:8000/search/</string>
      <string name="url_doctor_info">http://192.168.1.3:8000/doctor/</string>
+     <string name="url_doctor_comments">http://192.168.1.3:8000/comments/</string>
     
      <string name="doctor_info">DOCTOR_INFO</string>
+    
+     <string name="Comments_View">مشاهده نظرات</string>
+    
+     <string name="add_comment">افزودن نظر</string>
 
 </resources>
