--- a/TabibYab/res/values/strings.xml
+++ b/TabibYab/res/values/strings.xml
@@ -7,12 +7,12 @@
     <string name="lng_tehran">51.4050659999999979</string>
     <string name="ok">تایید</string>
     <string name="cancel">بی خیال</string>
-    <string name="app_name">TabibYab</string>
-    <string name="add_clinic_activity">Add Clinic</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">طبیب یاب</string>
+    <string name="add_clinic_activity">افزودن مرکز درمانی</string>
+    <string name="action_settings">تنظیمات</string>
     <string name="hello_world">Hello world!</string>
     <string name="clinic_name">عنوان</string>
-    <string name="dialog_confirm_add_clinic">کلینیک جدید اضافه شود؟</string>
+    <string name="dialog_confirm_add_clinic">مرکز درمانی جدید اضافه شود؟</string>
     <string name="clinic_type">نوع مرکز درمانی</string>
     <string name="select_location">ثبت دقیق مکان برروی نقشه</string>
     <string-array name="clinic_types">
@@ -23,7 +23,7 @@
     
      
     
-     <string name="doctor_info">DOCTOR_INFO</string>
+     <string name="doctor_info">اطلاعات مرکز درمانی</string>
     
      <string name="Comments_View">مشاهده نظرات</string>
     
