--- a/TabibYab/res/values/strings.xml
+++ b/TabibYab/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    
+    <string name="action_search">جست و جو</string>
+    <string name="search_hint">جست و جوی دکتر</string>
     <string name="dialog_location_not_found">برنامه قادر به تعیین مشخصات جغرافیایی نیست، لطفا در تنظیمات مشخصات جغرافیایی را فعال کنید </string>
     <string name="lat_tehran">35.6980799999999974</string>
     <string name="lng_tehran">51.4050659999999979</string>
@@ -32,7 +33,5 @@
      <string name="commenter_name">نام نظر دهنده</string>
     
      <string name="comment_text">متن نظر</string>
-    
-     <string name="Score">امتیاز</string>
 
 </resources>
