doctor information added!

--- a/TabibYab/res/values/strings.xml
+++ b/TabibYab/res/values/strings.xml
@@ -51,5 +51,7 @@
      <string name="commenter_name">نام نظر دهنده</string>
     
      <string name="comment_text">متن نظر</string>
+    
+     <string name="speciality">تخصص</string>
 
 </resources>
