profile get fixed! but uploaad??

--- a/TabibYab/res/values/strings.xml
+++ b/TabibYab/res/values/strings.xml
@@ -109,5 +109,7 @@
      <string name="speciality">تخصص</string>
     
      <string name="clinic_phone">تلفن</string>
+    
+     <string name="add_profile">انتخاب تصویر پروفایل</string>
 
 </resources>
